2007-02-22 Jens Tkotz <jens@peino.de> 1.6-RC1-svn-b37

 * Change: Use nice YUI tooltips in album view.

   - Adjust css classname to g-tooltip in js/yui/container-min.js
   - Added new css class in css/screen.css.default
   - Modified method Album::getThumbnailTag
   -- If not given, add a HTML id
   
2007-02-22 Jens Tkotz <jens@peino.de> 1.6-RC1-svn-b36

 * Change: Update js/wz_tooltip.js to Version 3.45
 
 * Change: Update js/wz_jsgraphics.js to Version 3.00
 
2007-02-21 Jens Tkotz <jens@peino.de> 1.6-RC1-svn-b35

 * New: lib/filetypes.php
 
 * Change: Moved from util.php into lib/filetypes.php
 		   - acceptableArchive()
 		   - acceptableArchiveList()
 		   - acceptableFormat()
 		   - acceptableFormatList()
 		   - acceptableFormatRegexp()
 		   - acceptableImageList()
 		   - acceptableMovieList()
 		   - isImage()
 		   - isMovie()
  
  		  Added phpdoc for all and ordered them alphabetical.
 
 * Change: Moved processNewImage() into lib/albumItem.php
 
 * Change: Moved rmdirRecursive() into lib/filesystem.php
 
 * Fix: Cleanup and repaired autocomplete.
 
2007-02-17 Jens Tkotz <jens@peino.de> 1.6-RC1-svn-b34

 * Change: Nicified (with accesskeys) diagnotisc page.
 
 * Fix: Double accesskey in session_test.php
 
 * Change: Some layout corrections in view_album.php
 
2007-02-17 Jens Tkotz <jens@peino.de> 1.6-RC1-svn-b33

 * Change: Better handling of accesskeys in galleryLink()
 
 * Change: Better status message in copy_photo.pgp
 
 * Fix: Double accesskey in edit_caption.php
 
 * Change: Nicified sort_album.php a little.
 
2007-02-17 Jens Tkotz <jens@peino.de> 1.6-RC1-svn-b32

 * Fix: Initialize field 'dimensionsAsPopup' for new albums.
 
 * New: Added possibility for overwriting height and with in method
        Image::getTag()
    
 * Change: No need to get accesskey in function removeAccessKey()
     
 * New: Add title attribute for tabs.
      
2007-02-13 Jens Tkotz <jens@peino.de> 1.6-RC1-svn-b31

 All in captionator:
 
 * Fix: Better subalbum handling.