@@ -1,3 +1,15 @@
+2007-02-22 Jens Tkotz <jens@peino.de> 1.6-RC1-svn-b38
+
+ * Fix/Change: Add new param $useAccesskey to galleryIconLink()
+   - If set to no, an existing accesskey identifier is just removed,
+   	 but not used.
+   	 This was a problem in thumbnail view with options as icons.
+   	 (e.g. multiple "send as ecard" with same accesskey)
+   	 
+ * Fix: Link back to stats-wizard in stats was wrong.
+ 
+ * Fix: Focus Javascript in popups/edit_caption.php was outdated.
+ 
 2007-02-22 Jens Tkotz <jens@peino.de> 1.6-RC1-svn-b37
 
  * Change: Use nice YUI tooltips in album view.
